syntax = "proto3";
import "BasicTypes.proto";
import "DtoTypes.proto";

option csharp_namespace = "ClassicTestService";

package ClassicTestService;

service ClassicTestService {
	rpc GetToolsFromLocationTests(Long) returns (ListOfClassicTestPowToolData);
	rpc GetClassicMfuHeaderFromTool(GetClassicHeaderFromToolRequest) returns (ListOfClassicMfuTest);
	rpc GetClassicChkHeaderFromTool(GetClassicHeaderFromToolRequest) returns (ListOfClassicChkTest);
	rpc GetValuesFromClassicChkHeader(ListOfLongs) returns (ListOfClassicChkTestValue);
	rpc GetValuesFromClassicMfuHeader(ListOfLongs) returns (ListOfClassicMfuTestValue);
	rpc GetClassicProcessHeaderFromLocation(Long) returns (ListOfClassicProcessTest);
	rpc GetValuesFromClassicProcessHeader(ListOfLongs) returns (ListOfClassicProcessTestValue);
}

message ClassicTestPowToolData {
	Tool tool = 1;
	NullableDateTime firstTest = 2;
	NullableDateTime lastTest = 3;
	bool isToolAssignmentActive = 4;
}

message ListOfClassicTestPowToolData{
	repeated ClassicTestPowToolData classicTestPowToolDatas = 1;
} 

message GetClassicHeaderFromToolRequest {
	int64 powToolId = 1;
	NullableLong locationId = 2;
}